DFG liveness can't skip tail caller inline frames https://bugs.webkit.org/show_bug.cgi?id=195715 JSTests:

Reviewed by Saam Barati.

* stress/dfg-scan-inlined-tail-caller-frames-liveness.js:
(i.foo):

Source/JavaScriptCore:

<rdar://problem/46221598>

Reviewed by Saam Barati.

In order to simplify OSR exit/DFG bytecode parsing our bytecode
generator always emits an op_ret after any tail call. However, the
DFG when computing the liveness of locals, would skip any tail
caller inline frames. This mean that if we ended up inserting a
Check that would OSR to the op_ret we wouldn't have kept
availability data around for it.

* dfg/DFGGraph.cpp:
(JSC::DFG::Graph::isLiveInBytecode):
* dfg/DFGGraph.h:
(JSC::DFG::Graph::forAllLocalsLiveInBytecode):


Canonical link: https://commits.webkit.org/210035@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@242945 268f45cc-cd09-0410-ab3c-d52691b4dbfc